# stitchcraft

./: .gitignore  README.md  dune  dune-project  fonts.sqlite3  stitchcraft.opam  survey.md
assemble/lib/: assemble.ml  dune
assemble/lib_test/: dune  lib_test.ml  stitch.json
assemble/src/: assembler.ml  dune
border/lib/: border.ml  dune
border/lib_test/: dune  test_border.ml
border/src/: dune  embellish_stitch.ml  repeat_corner.ml
border/src/test/: center.pattern
c64say/lib/: assemble.ml  c64chars.ml  c64colors.ml  chars.ml  colors.ml  dune
c64say/lib_test/: dune  lib_test.ml
c64say/src/: c64chars.ml  c64colors.ml  c64png.ml  c64say.ml  c64stitch.ml  dune
db/: db.ml  dune
deploytron/lib/: dune  etsy.ml
deploytron/src/: dune  get.ml  list.ml  upload.ml
dmc_browser/: browse_dmc.ml  dune
embellish/: dune-project
embellish/lib/: borders.ml  compose.ml  compose_png.ml  compose_stitch.ml  dune
embellish/lib_test/: dune  test_borders.ml
embellish/src/: dune  embellish.ml  embellish_png.ml  embellish_stitch.ml  hcat.ml  repeat_corner.ml  vcat.ml
embellish/src/test/: border.json  corner.pattern  fencepost.pattern  repeat_center.pattern  top.pattern
embellish/test/: dune  stitch_test.ml
estimator/: dune-project  estimator.ml
estimator/lib/: dune  estimator.ml
estimator/src/: dune  estimate.ml
fontify/: chars.ml  dune  dune-project  fontify.ml
fontreader/lib/: dune  ebdt.ml  eblc.ml  js2stitchfont.ml  otf2stitchfont.ml  psf2stitchfont.ml  rawbits.ml  rawbytes.ml  readfiles.ml  yaff2stitchfont.ml  yaff2stitchfont.mli
fontreader/src/: dune  font2postgres.ml  font2sqlite.ml  font_of_file.ml  postgres.ml  psf2sqlite.ml  readpsf.ml  sqlite.ml
fontreader/src/fonts/: Bm437_ACM_VGA_8x14.otb  Bm437_ACM_VGA_8x16.otb  Bm437_ACM_VGA_8x8.otb  Bm437_ACM_VGA_9x14.otb  Bm437_ACM_VGA_9x16.otb  Bm437_AMI_EGA_8x8-2y.otb  Bm437_AMI_EGA_8x8.otb  Bm437_AMI_EGA_9x14.otb  Bm437_ATI_8x14.otb  Bm437_ATI_8x16.otb  Bm437_ATI_8x8-2y.otb  Bm437_ATI_8x8.otb  Bm437_ATI_9x14.otb  Bm437_ATI_9x16.otb  Bm437_ATI_9x8.otb  Bm437_ATI_SmallW_6x8.otb  Bm437_ATT_PC6300.otb  Bm437_Acer710_CGA.otb  Bm437_Acer_VGA_8x8.otb  Bm437_Acer_VGA_9x8.otb  Bm437_Amstrad_PC-2y.otb  Bm437_Amstrad_PC.otb  Bm437_ApricotPortable.otb  Bm437_ApricotXenC.otb  Bm437_Apricot_200L-2y.otb  Bm437_Apricot_200L.otb  Bm437_Apricot_256L.otb  Bm437_CL_EagleIII_9x16.otb  Bm437_CL_EagleII_8x16.otb  Bm437_CL_Stingray_8x16.otb  Bm437_CL_Stingray_8x16_bold.otb  Bm437_CL_Stingray_8x19.otb  Bm437_CL_Stingray_8x19_bold.otb  Bm437_CompaqThin_8x14.otb  Bm437_CompaqThin_8x16.otb  Bm437_CompaqThin_8x8.otb  Bm437_Compaq_Port3-2x.otb  Bm437_Compaq_Port3.otb  Bm437_Compis.otb  Bm437_Copam_BIOS.otb  (+219 more)
fontreader/test/: dune  readotf.ml  test.ml
ingest_pattern/: dune  ingest.ml
js_png_canvas/: dune-project
js_png_canvas/client/: canvas.ml  dune  grid.ml  index.html
js_png_canvas/server/: config.ml  dispatch.ml  dune
listing/: annotate.ml  dune  dune-project  listing.ml
listing/test/: test.pattern
notty_canvas/: dune-project
notty_canvas/lib/: canvas.ml  controls.ml  dune
notty_canvas/src/: dune  notty_canvas.ml
patbrowser/: controls.ml  dune  view.ml
patbrowser/lib/: controls.ml  dune  patbrowser_canvas.ml  view.ml
patbrowser/src/: dune  patbrowser.ml
patreader/lib/: dune  palette.ml  patfile.ml  patreader.ml  translate.ml
patreader/src/: backstitch.ml  dune  pat2stitchy.ml  patreader.ml  translator.ml
patreader/src/test/: .gitignore
pattern/: notes.txt
pattern/lib/: colors.ml  consts.ml  coverpage.ml  dune  grid.ml  output_pdf.ml  palette.ml  positioning.ml  types.ml
pattern/lib_test/: dune  test.ml
pattern/src/: dune  output_pdf.ml  palette.ml  pngpattern.ml  stitchpattern.ml
pattern/src/test/: stitch.json
pngimport/: dune  dune-project  pngimport.ml
primitives/lib/: dune  primitives.ml
primitives/src/: backstitch.ml  dune  empty.ml  piece.ml  rect.ml  rotate.ml
psf2stitchfont/: dune-project
psf2stitchfont/lib/: .otf2stitchfont.ml.swp  dune  ebdt.ml  otf2stitchfont.ml  psf2stitchfont.ml  rawbits.ml  rawbytes.ml  readfiles.ml
psf2stitchfont/src/: dune  otf2sqlite.ml  psf2sqlite.ml  readotf.ml  readpsf.ml  sqlite.ml
psf2stitchfont/src/fonts/: Bm437_ACM_VGA_9x8.otb  Bm437_AMI_BIOS-2y_12.fnt.psf  Bm437_AMI_BIOS_6.fnt.psf  Bm437_AMI_EGA_8x14.otb  Bm437_AST_PremiumExec.otb  Bm437_AT&T_PC63__-2x_12.fnt.psf  Bm437_AT&T_PC63___12.fnt.psf  Bm437_ATI_8x14_1_.fnt.psf  Bm437_ATI_8x16_12.fnt.psf  Bm437_ATI_8x8-2y_12.fnt.psf  Bm437_ATI_8x8_6.fnt.psf  Bm437_ATI_9x14_1_.fnt.psf  Bm437_ATI_9x16_12.fnt.psf  Bm437_ATI_SmallW_6x8_6.fnt.psf  Bm437_ATT_PC6300-2x.otb  Bm437_Acer710_CGA-2y.otb  Bm437_Acer710_Mono.otb  Bm437_Acer_VGA_8x8-2y.otb  Bm437_AmstradPC1512-2y_12.fnt.psf  Bm437_AmstradPC1512_6.fnt.psf  Bm437_Apricot_256L-2y.otb  Bm437_Apricot_Mono.otb  Bm437_CL_EagleIII_8x16.otb  Bm437_CL_EagleII_9x16.otb  Bm437_CompaqThin_8x14_1_.fnt.psf  Bm437_CompaqThin_8x16_12.fnt.psf  Bm437_CompaqThin_8x8_6.fnt.psf  Bm437_Copam_BIOS-2y.otb  Bm437_Cordata_PPC-400.otb  Bm437_DG_One.otb  Bm437_DOS-V_TWN19.otb  Bm437_DOS-V_re_JPN24.otb  Bm437_DOS-V_re_JPN30.otb  Bm437_DTK_BIOS-2y_12.fnt.psf  Bm437_DTK_BIOS_6.fnt.psf  Bm437_EagleSpCGA_Alt1.otb  Bm437_EpsonMGA_Mono.otb  Bm437_FMTowns_re_8x16-2x.otb  Bm437_IBM_327_pc_1_.fnt.psf  Bm437_IBM_BIOS-2x_6.fnt.psf  (+113 more)
src/: annotate.ml  apply.ml  assembler.ml  backstitch.ml  browse.ml  dune  emborder.ml  estimate.ml  exportpdf.ml  font_of_file.ml  hcat.ml  ingest.ml  insert.ml  listing.ml  pat.ml  pdf.ml  piece.ml  rect.ml  replace.ml  rotate.ml  stitchcraft.ml  stitchpdf.ml  stitchterm.ml  surround.ml  textstitch.ml  util.ml  vcat.ml  words.ml
stitchy/: dune-project
stitchy-caqti/: README.md
stitchy/lib/: dMC.ml  dune  files.ml  layers.ml  operations.ml  rGB.ml  symbol.ml  thread.ml  transformers.ml  types.ml  types.mli
two_color_import/: dune  pngimport.ml
webapp/: README.md
webapp/display/: canvas.ml  display.ml  dune  grid.ml  server.ml  tags.ml  template.eml.ml
webapp/editor/: canvas.ml  dune  edit.ml  grid.ml  index.html
webapp/server/: dune
(+29 files in other folders)
