(rule (alias
 runtest)
 (deps fonts.sqlite3)
 (action
  (progn
   (run c64stitch -o hello.json --interline=2 "hello to this whole\nbeautiful world")
   (run c64stitch -t cyan -o border.json "\\")
   (run embellish_stitch --top=border.json --side=border.json --center=hello.json --corner=border.json -o embellished.json)
   (run stitchpattern -w "made with love by yomimono" -i embellished.json -o embellished.pdf)
   (run evince embellished.pdf)
   (run listing -i embellished.json -o embellished_preview.png)
   (run eog embellished_preview.png)
  )
 )
)

(rule (alias
 fortune)
 (deps fonts.sqlite3)
 (action
  (progn
   (run c64stitch -o fortune.json fortune)
   (run notty_canvas fortune.json)
   )))

(rule (alias
 brainfuck)
 (deps fonts.sqlite3)
 (action
  (progn
   (run c64stitch -o program.json
"++++++++
[>++++[>
++>+++>+
++>+<<<<
-]>+>+>-
>>+[<]<-
]>>.>---
.+++++++
..+++.>>
.<-.<.++
+.------
.-------
-.>>+.>+
+.")
 (run stitchpattern -w "for more fun patterns, visit stitch.website" -i program.json -o brainfuck.pdf)
 (run listing -i program.json -o brainfuck.png)
)))


(rule (alias
 butt)
 (deps fonts.sqlite3)
 (action
  (progn
   (run c64stitch -o butt.json "butt")
   (run stitchpattern --paper letter -w "for more fun patterns, visit stitch.website" -i butt.json -o butt.pdf)
   (run evince butt.pdf)
)))

(rule (alias
 cards)
 (deps fonts.sqlite3)
 (action
  (progn
   (run c64stitch --background=0,0,0 -t red -o suits.json "♠️♣️♦️♥️")
   (run stitchpattern -i suits.json -o suits.pdf)
   (run evince suits.pdf)
   )))

(rule (alias
 be_gay_find_primes)
 (deps (source_tree c64chars) fonts.sqlite3)
 (action
  (progn
   (run c64stitch --background=0,0,0 -o red.json -t red "2")
   (run c64stitch --background=0,0,0 -o orange.json -t orange "3")
   (run c64stitch --background=0,0,0 -o yellow.json -t yellow "5")
   (run c64stitch --background=0,0,0 -o green.json -t green "7")
   (run c64stitch --background=0,0,0 -o hblue.json -t blue "11")
   (run c64stitch --background=0,0,0 -o hpurple.json -t purple "13")
   (run c64stitch --background=0,0,0 -o vblueone.json -t blue "1")

   (run hcat -o vblueeleven.json vblueone.json vblueone.json)
   (run c64stitch -o vpurpleone.json -t purple "1")
   (run c64stitch -o vpurplethree.json -t purple "3")
   
   (run hcat -o vpurplethirteen.json vpurpleone.json vpurplethree.json)

   (run vcat -o top.json red.json orange.json yellow.json green.json hblue.json hpurple.json)

   (run hcat -o side.json red.json orange.json yellow.json green.json vblueeleven.json vpurplethirteen.json)

   (run assemble --bg=0,0,0 -t B5200 -o corner.json -i c64chars/d3.png.layer0)

   (run c64stitch -t white --background=0,0,0 -o be.json "be")
   (run c64stitch -t white --background=0,0,0 -o gay.json "gay")
   (run c64stitch -t white --background=0,0,0 -o find.json "find")
   (run c64stitch -t white --background=0,0,0 -o primes.json "primes")

   (run hcat -o saying.json be.json gay.json find.json primes.json)
   (run embellish_stitch --top=top.json --side=side.json --corner=corner.json --center=saying.json -o be_gay_find_primes.json)
   (run stitchpattern -w "for more fun patterns, visit stitch.website" -i be_gay_find_primes.json -o be_gay_find_primes.pdf)
   (run notty_canvas be_gay_find_primes.json)
        )))

(rule (alias
  tops)
  (deps (source_tree psf2stitchfont/src/fonts) )
  (action
   (progn
    (run psf2sqlite --db /tmp/fonts.sqlite3 --name topfont psf2stitchfont/src/fonts/Bm437_ATI_8x8_6.fnt.psf)
    (run psf2sqlite --db /tmp/fonts.sqlite3 --name skinnyfont psf2stitchfont/src/fonts/Bm437_Kaypro2K_6.fnt.psf)
    (run c64stitch --db /tmp/fonts.sqlite3 --font topfont --background=255,255,255 -t black -o center.json "
We must, we must,
we must decrease our bust!
The smaller the better,
we don't need a letter,
we'll ditch all the bounce and fuss!
"
    )
    (run c64stitch --db /tmp/fonts.sqlite3 --font skinnyfont --background=255,255,255 -t black -o xform.json "(o )( o) => |o    o|")
    (run hcat -o tops.json xform.json center.json xform.json)
    (run stitchpattern -w "for more fun patterns, visit stitch.website" -i tops.json -o tops.pdf)
    (run evince tops.pdf)
  )))

(rule (alias verbs)
  (deps (source_tree c64chars) fonts.sqlite3)
  (action
   (progn
    (run c64stitch --background=0,0,0 -t purple -o action.json "Pick up Zoey                       ")
    (run c64stitch --background=0,0,0 -t green -o verbs1.json  "Cuddle Pet    Play    Wear   Nap   ")
    (run c64stitch --background=0,0,0 -t green -o verbs2.json  "Hug    Dither Pick up Judge  Visit ")
    (run c64stitch --background=0,0,0 -t green -o verbs3.json  "Watch  Read   Fuss    Listen Flirt ")
    (run c64stitch --background=0,0,0 -t purple -o items1.json "wallet            cute earrings    ")
    (run c64stitch --background=0,0,0 -t purple -o items2.json "phone                              ")
    (run hcat -o verbs.json action.json verbs1.json verbs2.json verbs3.json items1.json items2.json) 
    (run estimate verbs.json)
    (run stitchpattern -i verbs.json -o verbs.pdf)
    (run evince verbs.pdf)
    (run notty_canvas verbs.json)
    )))
